# data_platform_sandbox

./: .gitignore  data_pull_mssql.py  pyproject.toml  test.py  test_duckdb_read.py  test_sdk.py
utils/: funcs.py
